--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,10 @@ jobs:
             packages: write
 
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
 
             - name: Log in to the Container registry
-              uses: docker/login-action@v2
+              uses: docker/login-action@v3
               with:
                   registry: ${{ env.REGISTRY }}
                   username: ${{ github.actor }}
@@ -42,7 +42,7 @@ jobs:
                       latest=auto
 
             - name: Build and push
-              uses: docker/build-push-action@v4
+              uses: docker/build-push-action@v5
               with:
                   context: .
                   push: true
@@ -50,6 +50,7 @@ jobs:
                   labels: ${{ steps.meta.outputs.labels }}
 
     deploy-to-prod:
+        needs: [build-and-push-image]
         if: contains( github.ref, 'main')
 
         runs-on: [self-hosted, deployment-runner]
@@ -64,6 +65,7 @@ jobs:
               run: cd $GITHUB_WORKSPACE && tools/deploy-prod.sh
 
     deploy-to-review:
+        needs: [build-and-push-image]
         if: contains( github.ref, 'main') == false
 
         runs-on: [self-hosted, deployment-runner]
