--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ env:
 on:
     workflow_call:
 jobs:
-    buildx:
+    build:
         runs-on: ubuntu-latest
         timeout-minutes: 60
         steps:
