Add continuous deployment configuration (#15)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,26 +1,21 @@
-name: Build & Publish Container
+# Environment variables defined in a calling workflow are not accessible to this reusable workflow. Refer to the documentation for further details on this limitation.
+name: Build & Publish Image
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 on:
-  push:
-    branches:
-      - "main"
-  
+  workflow_call:
 jobs:
-  build-and-push-image:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
+    timeout-minutes: 60
     steps:
-      - uses: actions/checkout@v3
-        
+      - uses: actions/checkout@v4
+
       - name: Log in to the Container registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -28,19 +23,18 @@ jobs:
 
       - name: Extract metadata for Docker
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=ref,event=tag
+            type=sha,format=long
+            type=match,pattern=main
           flavor: |
-            latest=true
+            latest=auto
 
       - name: Build and push
-        uses: docker/build-push-action@v4
-        with: 
+        uses: docker/build-push-action@v5
+        with:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
