--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Deploy
 
 on:
   push:
-  workflow_dispatch:
+  pull_request:
+    types: [closed]
 
 concurrency:
   group: '${{ github.ref }}'
@@ -20,7 +21,7 @@ jobs:
     runs-on: [self-hosted, deployment-runner]
     container:
       image: git.dbyte.xyz/distro/levant
-    if: github.ref != 'refs/heads/main' && github.event_name != 'workflow_dispatch'
+    if: github.ref != 'refs/heads/main'
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v4
@@ -37,7 +38,7 @@ jobs:
     runs-on: [self-hosted, deployment-runner]
     container:
       image: multani/nomad
-    if: github.ref != 'refs/heads/main' && github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'pull_request'
     timeout-minutes: 60
     steps:
       - run: echo "null"
@@ -50,7 +51,7 @@ jobs:
     runs-on: [self-hosted, deployment-runner]
     container:
       image: git.dbyte.xyz/distro/levant
-    if: github.ref == 'refs/heads/main' && github.event_name == 'workflow_dispatch'
+    if: github.ref == 'refs/heads/main'
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v4
