Change when review is deployed

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: [self-hosted, deployment-runner]
     container:
       image: git.dbyte.xyz/distro/levant
-    if: github.ref != 'refs/heads/main'
+    if: github.ref != 'refs/heads/main' && github.event_name == 'push'
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v4
