--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,9 @@ on:
   pull_request:
     types: [closed]
 
-concurrency:
-  group: '${{ github.ref }}'
-  cancel-in-progress: true
+      #concurrency:
+      #  group: '${{ github.ref }}'
+      #  cancel-in-progress: true
 
 jobs:
   build:
