--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,9 @@ on:
   pull_request:
     types: [closed]
 
-      #concurrency:
-      #  group: '${{ github.ref }}'
-      #  cancel-in-progress: true
+  #concurrency:
+  #  group: '${{ github.ref }}'
+  #  cancel-in-progress: true
 
 jobs:
   build:
@@ -33,8 +33,6 @@ jobs:
           ./.github/deploy/review.hcl
 
   stop_review:
-    needs:
-      - build
     runs-on: [self-hosted, deployment-runner]
     container:
       image: multani/nomad
@@ -43,7 +41,7 @@ jobs:
     steps:
       - run: echo "null"
       - run: nomad status -address=http://nomad.service.consul:4646
-      - run: nomad job stop -address=http://nomad.service.consul:4646 -purge blockbot-${GITHUB_REF_NAME}
+      - run: nomad job stop -address=http://nomad.service.consul:4646 -purge blockbot-${GITHUB_HEAD_REF}
 
   deploy_prod:
     needs:
@@ -51,7 +49,7 @@ jobs:
     runs-on: [self-hosted, deployment-runner]
     container:
       image: git.dbyte.xyz/distro/levant
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     timeout-minutes: 60
     steps:
       - uses: actions/checkout@v4
