--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
   build:
     name: build
     uses: './.github/workflows/build.yml'
+    if: github.event_name != 'pull_request'
 
   deploy_review:
     needs:
