--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-discord-typings==0.5.1
-jurigged==0.5.6
-discord-py-interactions==5.0.0
-python-dotenv==0.19.1
-loguru==0.7.2
+hikari==2.0.0.dev122
+hikari-arc==1.1.0
+python-dotenv==1.0.1
