--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
           tags: |
             type=sha,format=long
             type=match,pattern=main
+            type=raw,value=latest,enable={{is_default_branch}}
           flavor: |
             latest=auto
 
