levant: will it work????

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
 
     runs-on: [self-hosted, deployment-runner]
     container:
-      image: git.dbyte.xyz/distro/levant
+      image: hashicorp/levant
     if: github.ref != 'refs/heads/main' && github.event_name == 'push'
     timeout-minutes: 60
     steps:
@@ -49,7 +49,7 @@ jobs:
       - build
     runs-on: [self-hosted, deployment-runner]
     container:
-      image: git.dbyte.xyz/distro/levant
+      image: hashicorp/levant
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     timeout-minutes: 60
     steps:
