--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-hikari==2.0.0.dev122
-hikari-arc==1.1.0
-ruff==0.2.0
-pre-commit==3.6.0
+hikari==2.1.0
+hikari-arc==1.3.4
+hikari-miru==4.1.1
 python-dotenv==1.0.1
 pyfiglet==1.0.2
 fortune-python==1.1.1
