--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,37 @@ target-version = "py312"
 docstring-code-format = true
 line-ending = "lf"
 
+[tool.ruff.lint]
+select = [
+    "F", # Pyflakes
+    "E", # Error (pycodestyle)
+    "W", # Warning (pycodestyle)
+    "I", # isort
+    "N", # pep8-naming
+    "ANN", # flake8-annotations
+    "ASYNC", # flake8-async
+    "A", # flake8-builtins
+    "COM", # flake8-commas
+    "C4", # flake8-comprehensions
+    "DTZ", # flake8-datetimez
+    "ICN", # flake8-import-conventions
+    "Q", # flake8-quotes
+    "RET", # flake8-return
+    "SIM", # flake8-simplify
+    "TID", # flake8-tidy-imports
+    "TC", # flake8-type-checking
+    "ARG", # flake8-unused-arguments
+    "ERA", # eradicate
+    "PL", # Pylint
+    "PERF", # Perflint
+    "RUF", # Ruff-specific rules
+]
+ignore = [
+    "E501", # line-too-long
+    "PLR2004", # magic-value-comparison
+    "PLR0913", # too-many-arguments
+    "COM812", # missing-trailing-comma
+]
+
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"
