--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Run ruff via nox
         run: |
           python -m pip install nox
-          python -m nox -s format
+          python -m nox -s format_check
 
   pyright:
     runs-on: ubuntu-latest
