--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - ./postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=blockbot
+      - POSTGRES_PASSWORD=password
 
 volumes:
   postgres:
