--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,8 @@ LDAP_USERNAME=
 LDAP_PASSWORD=
 
 AGENDA_TEMPLATE_URL="https://md.redbrick.dcu.ie/foo"
+
+DB_HOST=postgres:5432
+DB_NAME=blockbot
+DB_USER=blockbot
+DB_PASSWORD=
