--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
       - .env
 
   postgres:
-    image: postgres:17
+    image: postgres:17-alpine
     restart: unless-stopped
     ports:
       - 5432:5432
