add DB_ENABLED envvar
yes, it isn't great

but it works...

--- a/.env.sample
+++ b/.env.sample
@@ -8,6 +8,7 @@ LDAP_PASSWORD=
 
 AGENDA_TEMPLATE_URL="https://md.redbrick.dcu.ie/foo"
 
+DB_ENABLED= # false, or anything
 DB_HOST=postgres:5432
 DB_NAME=blockbot
 DB_USER=blockbot
