update dependencies, complete TODOs, typing fixes, use uv where applicable

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -3,32 +3,43 @@ name: Format & Type Check
 on: [push, pull_request]
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    name: "Set up Python and uv"
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          # this should be the same as in pyproject.toml
+          version: "0.6.9"
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: "pyproject.toml"
+
   formatting:
     runs-on: ubuntu-latest
+    needs: setup
     name: "Check code style"
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
 
       - name: Run ruff via nox
         run: |
-          python -m pip install nox
-          python -m nox -s format_check
+          uv sync --dev
+          uv run nox -s format_check
 
   pyright:
     runs-on: ubuntu-latest
+    needs: setup
     name: "Type checking"
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.12
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
 
       - name: Run pyright via nox
         run: |
-          python -m pip install nox
-          python -m nox -s pyright
+          uv sync --dev
+          uv run nox -s pyright
