--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -8,27 +8,41 @@ jobs:
     name: "Check code style"
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.12
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          # this should be the same as in pyproject.toml
+          version: "0.6.9"
+
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version-file: "pyproject.toml"
 
       - name: Run ruff via nox
         run: |
-          python -m pip install nox
-          python -m nox -s format_check
+          uv sync --group nox
+          uv run nox -s format_check
 
   pyright:
     runs-on: ubuntu-latest
     name: "Type checking"
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.12
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          # this should be the same as in pyproject.toml
+          version: "0.6.9"
+
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version-file: "pyproject.toml"
 
       - name: Run pyright via nox
         run: |
-          python -m pip install nox
-          python -m nox -s pyright
+          uv sync --group nox
+          uv run nox -s pyright
