rcon: add whitelist command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pyfiglet>=1.0.2",
     "python-dotenv>=1.0.1",
     "sqlalchemy>=2.0.39",
+    "rcon>=2.4.9",
 ]
 
 [project.urls]
