add env to .env.smaple, rmeove unused vars and add checking if port is not provided

--- a/.env.sample
+++ b/.env.sample
@@ -13,6 +13,10 @@ DB_NAME=blockbot
 DB_USER=blockbot
 DB_PASSWORD=
 
+RCON_HOST= 
+RCON_PORT=
+RCON_PASSWORD= 
+
 # all of these can be set to 'false' and default to 'true'
 DB_ENABLED=
 LDAP_ENABLED=
