--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 TOKEN=
-DEBUG=
+DEBUG=false  # or 'true', default 'false'
 
 DISCORD_UID_MAP="user1=1234,user2=4567,user3=7890"
 
@@ -8,8 +8,13 @@ LDAP_PASSWORD=
 
 AGENDA_TEMPLATE_URL="https://md.redbrick.dcu.ie/foo"
 
-DB_ENABLED= # false, or anything
 DB_HOST=postgres:5432
 DB_NAME=blockbot
 DB_USER=blockbot
 DB_PASSWORD=
+
+# all of these can be set to 'false' and default to 'true'
+DB_ENABLED=true
+RCON_ENABLED=true
+LDAP_ENABLED=true
+PERMS_ENABLED=true
