--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 TOKEN=
-DEBUG=false  # or 'true', default 'false'
+DEBUG=  # 'true' or 'false', default 'false'
 
 DISCORD_UID_MAP="user1=1234,user2=4567,user3=7890"
 
@@ -14,7 +14,7 @@ DB_USER=blockbot
 DB_PASSWORD=
 
 # all of these can be set to 'false' and default to 'true'
-DB_ENABLED=true
-RCON_ENABLED=true
-LDAP_ENABLED=true
-PERMS_ENABLED=true
+DB_ENABLED=
+RCON_ENABLED=
+LDAP_ENABLED=
+PERMS_ENABLED=
