--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 TOKEN=
-DEBUG=
+DEBUG=  # 'true' or 'false', default 'false'
 
 DISCORD_UID_MAP="user1=1234,user2=4567,user3=7890"
 
@@ -12,3 +12,8 @@ DB_HOST=postgres:5432
 DB_NAME=blockbot
 DB_USER=blockbot
 DB_PASSWORD=
+
+# all of these can be set to 'false' and default to 'true'
+DB_ENABLED=
+LDAP_ENABLED=
+PERMS_ENABLED=
