--- a/.env.sample
+++ b/.env.sample
@@ -13,7 +13,12 @@ DB_NAME=blockbot
 DB_USER=blockbot
 DB_PASSWORD=
 
+RCON_HOST=
+RCON_PORT=
+RCON_PASSWORD=
+
 # all of these can be set to 'false' and default to 'true'
 DB_ENABLED=
 LDAP_ENABLED=
 PERMS_ENABLED=
+RCON_ENABLED=
