update .env.sample with new keys

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
 TOKEN=
 DEBUG=  # 'true' or 'false', default 'false'
 
-DISCORD_UID_MAP="user1=1234,user2=4567,user3=7890"
+DISCORD_UID_MAP="chair=1234,secretary=4567,user1=1234,user2=4567,user3=7890"
 
 LDAP_USERNAME=
 LDAP_PASSWORD=
