debug levant issue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: actions/checkout@v5
       - run: |
           levant deploy \
+          -force-count=true \
           -var git_sha="${GITHUB_SHA}" \
           -var environment_slug="${GITHUB_REF_NAME}" \
           -address "http://nomad.service.consul:4646" \
