--- a/.env.sample
+++ b/.env.sample
@@ -17,8 +17,15 @@ RCON_HOST=
 RCON_PORT=
 RCON_PASSWORD=
 
+MINIO_ENDPOINT=
+MINIO_SECURE=
+MINIO_REGION=
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
+
 # all of these can be set to 'false' and default to 'true'
 DB_ENABLED=
 LDAP_ENABLED=
 PERMS_ENABLED=
 RCON_ENABLED=
+MINIO_ENABLED=
